<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".video.VideoDemoActivity">


    <SurfaceView
        android:id="@+id/preview_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/settingsCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settingsCard"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/beige"
        app:strokeWidth="0dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp">

            <TextView
                android:id="@+id/videoSourceTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/video_source"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/videoSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/videoSourceTitle"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/camera"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/device_camera" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/file"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_file" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/stream"
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rtsp_stream" />
            </com.google.android.material.chip.ChipGroup>

            <LinearLayout
                android:id="@+id/controlsGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/videoSource">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rtspInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:hint="@string/rtsp_or_http"
                    android:inputType="textUri"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/playVideo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/play"
                        app:cornerRadius="4dp" />
                </LinearLayout>
            </LinearLayout>

            <Spinner
                android:id="@+id/cameraSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/videoSource"
                android:visibility="gone" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
