<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/beige"
    android:padding="40dp"
    tools:context=".ui.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            app:strokeWidth="0dp"
            android:id="@+id/videoCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:minHeight="100dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/green"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_video"
                android:foregroundTint="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.34"
                android:gravity="center"
                android:text="@string/videoCard"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:letterSpacing=".1"
                android:textAllCaps="true" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:strokeWidth="0dp"
            android:id="@+id/imageCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/green"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_image"
                    android:foregroundTint="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.34"
                    android:gravity="center"
                    android:text="@string/imageCard"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:letterSpacing=".1"
                    android:textAllCaps="true" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            app:strokeWidth="0dp"
            android:id="@+id/settingsCard"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/green"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="60dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:padding="20dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:src="@drawable/ic_settings"
                    android:foregroundTint="@color/black"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.34"
                    android:gravity="center"
                    android:text="@string/settingsCard"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:letterSpacing=".1"
                    android:textAllCaps="true" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>